# brickbreaker

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  pyproject.toml  todo.txt
.github/: format.yml
.github/workflows/: format.yml
src/: fac.hpp  main.cpp
src/test/: tests.cpp
